tests/ui/case_type_mismatch.stderr
error[E0308]: mismatched types
 --> tests/ui/case_type_mismatch.rs:4:20
  |
4 | fn tested_function(_arg: i32) {
  |    --------------- ^^^^ expected `i32`, found `&str`
  |    |
  |    arguments to this function are incorrect
  |
note: function defined here
 --> tests/ui/case_type_mismatch.rs:4:4
  |
4 | fn tested_function(_arg: i32) {
  |    ^^^^^^^^^^^^^^^ ---------
