tests/ui/case_type_mismatch.rs
use test_casing::test_casing;

#[test_casing(2, ["test", "this"])]
fn tested_function(_arg: i32) {
    // Does nothing
}

fn main() {}
